--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,3 +14,20 @@
     margin-right: 20px;
   }
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 10px;
+  > li {
+    font-size: 22px;
+    font-weight: bold;
+    > ul {
+      font-size: 14px;
+      padding-left: 50px;
+      list-style: disc;
+      font-weight: normal;
+    }
+  }
+}
