--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,8 @@
   padding: 5px;
 }
 
-.main-content h2 > .main-content h3 {
-  magin-top: 0;
+.main-content h2 > h3 {
+  margin-top: 0;
 }
 
 .page-header {
