--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
-    <section class="page-header">
+    
+    
+<!--     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
@@ -21,7 +23,10 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-    </section>
+    </section> -->
+    
+    <div class="bannerImage" aria-hidden="true">
+    </div>
 
     <section class="main-content">
       {{ content }}
