Update image path

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 .bannerImage {
   height: 20vh;
   width: 100%;
-  background: url(assets/warwickPano.jpg) no-repeat center center fixed; 
+  background: url(../warwickPano.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
