--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,12 +4,9 @@
 @import "{{ site.theme }}";
 
 .bannerImage {
-  height: 20vh;
+  height: 450px;
   width: 100%;
-  background: url(../warwickPano.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: url(../warwickPano.jpg) no-repeat center center; 
   background-size: cover;
 }
 
