--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
     </section> -->
     
     <div class="bannerImage" aria-hidden="true">
+      <h1>Warwick Gems</h1>
     </div>
 
     <section class="main-content">
