--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,14 @@
 
 @import "{{ site.theme }}";
 
+h1, h2, h3, h4, h5 {
+  font-family: 'Patrick Hand SC', cursive;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .bannerImage {
   height: 450px;
   width: 100%;
