Adj list font choice

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,8 +58,9 @@ ul {
   list-style: none;
   margin-bottom: 15px;
   > li {
-    font-size: 22px;
+    font-size: 30px;
     font-weight: bold;
+    font-family: 'Patrick Hand SC', cursive;
     > ul {
       list-style: disc;
       padding-left: 50px;
