--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,6 +67,7 @@ ul {
       > li {
         font-size: 16px;
         font-weight: normal;
+        font-family: 'Open Sans', sans-serif;
       }
     }
   }
