--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,8 @@ h1 {
 }
 
 .main-content h2 {
-  background-color: gainsboro;
+  border-bottom: 5px solid #777777;
+  font-size: 200%
   padding: 5px;
 }
 
