Remove aria hidden, has h1 now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       {% endif %}
     </section> -->
     
-    <div class="bannerImage" aria-hidden="true">
+    <div class="bannerImage">
       <h1>Warwick Gems</h1>
     </div>
 
