Update hated fonts

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,11 +4,12 @@
 @import "{{ site.theme }}";
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Patrick Hand SC', cursive;
+  font-family: 'Neucha', cursive;
 }
 
 p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Overpass', sans-serif;
+  font-weight: 300;
 }
 
 .bannerImage {
@@ -61,14 +62,14 @@ ul {
   > li {
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Patrick Hand SC', cursive;
+    font-family: 'Neucha', cursive;
     > ul {
       list-style: disc;
       padding-left: 50px;
       > li {
         font-size: 16px;
-        font-weight: normal;
-        font-family: 'Open Sans', sans-serif;
+        font-weight: 300;
+        font-family: 'Overpass', sans-serif;
       }
     }
   }
