--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Neucha', cursive;
+  font-family: 'Arapey', cursive;
 }
 
 p {
@@ -62,7 +62,7 @@ ul {
   > li {
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Neucha', cursive;
+    font-family: 'Arapey', cursive;
     > ul {
       list-style: disc;
       padding-left: 50px;
