change fonts again

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,15 @@
 
 @import "{{ site.theme }}";
 
+$heading-font: 'Eczar', serif;
+$para-font: 'Work Sans', sans-serif;
+
 h1, h2, h3, h4, h5 {
-  font-family: 'Arapey', cursive;
+  font-family: $heading-font;
 }
 
 p {
-  font-family: 'Overpass', sans-serif;
+  font-family: $para-font;
   font-weight: 300;
 }
 
@@ -62,14 +65,14 @@ ul {
   > li {
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Arapey', cursive;
+    font-family: $heading-font;
     > ul {
       list-style: disc;
       padding-left: 50px;
       > li {
         font-size: 16px;
         font-weight: 300;
-        font-family: 'Overpass', sans-serif;
+        font-family: $para-font
       }
     }
   }
