Add some print styling

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,10 @@ p {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  @media print {
+    height: auto;
+    background: none;
+  }
 }
 
 h1 {
@@ -75,5 +79,12 @@ ul {
         font-family: $para-font
       }
     }
+  }
+}
+
+.printMessage {
+  display: none;
+  @media print {
+    display: block;
   }
 }
