Move print message within main-content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,12 +28,9 @@
     <div class="bannerImage">
       <h1>Warwick Gems</h1>
     </div>
-    
-    <section class="printMessage">
-      <p>We hope these gems help you enjoy your tour of these great museums and all their great content to the full!</p>
-    </section>
 
     <section class="main-content">
+      <p class="printMessage">We hope these gems help you enjoy your tour of these great museums and all their great content to the full!</p>
       {{ content }}
 
       <footer class="site-footer">
