--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,11 @@ h1 {
   @media (min-width: 600px) {
     font-size: 6vw;
   }
+  @media print {
+    font-size: 1vw;
+    margin: 0;
+    color: #000000;
+  }
 }
 
 .main-content {
