--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,12 @@
 $heading-font: 'Eczar', serif;
 $para-font: 'Work Sans', sans-serif;
 
+@media print {
+  body {
+    font-size: 50%;
+  }
+}
+
 h1, h2, h3, h4, h5 {
   font-family: $heading-font;
 }
@@ -42,9 +48,9 @@ h1 {
     font-size: 6vw;
   }
   @media print {
-    font-size: 1vw;
     margin: 0;
     color: #000000;
+    text-shadow: none;
   }
 }
 
