--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ $para-font: 'Work Sans', sans-serif;
 
 @media print {
   body {
-    font-size: 50%;
+    margin: 0 30px;
   }
 }
 
@@ -35,6 +35,9 @@ p {
   @media print {
     height: auto;
     background: none;
+    -webkit-box-pack: flex-start;
+    -ms-flex-pack: flex-start;
+    justify-content: flex-start;    
   }
 }
 
