--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </div>
 
     <section class="main-content">
-      <p class="printMessage">We hope these gems help you enjoy your tour of these great museums and all their great content to the full!</p>
+      <p class="printMessage">We hope these gems help you enjoy your tour of these great museums and all their great content to the full! Come visit us again at WarwickGems.com</p>
       {{ content }}
 
       <footer class="site-footer">
