--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
 
     <section class="main-content">
       <p class="printMessage">We hope these gems help you enjoy your tour of these great museums and all their great content to the full! Come visit us again at WarwickGems.com</p>
+      <p class="printMessage">Last updated on {{ site.time }}</p>
       {{ content }}
 
       <footer class="site-footer">
