--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,8 +67,11 @@ h1 {
 
 .main-content h2 {
   border-bottom: 5px solid #777777;
-  font-size: 200%;
+  font-size: 150%;
   padding: 5px;
+  @media (min-width: 600px) {
+     font-size: 200%;
+  }
   @media print {
     font-size: 150%;
   }
